--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj
@@ -61,6 +61,7 @@
     <ClInclude Include="Source\GUI_Array.h" />
     <ClInclude Include="Source\GUI_Button.h" />
     <ClInclude Include="Source\GUI_Manager.h" />
+    <ClInclude Include="Source\GUI_Selector.h" />
     <ClInclude Include="Source\GUI_Text.h" />
     <ClInclude Include="Source\GUI_Slider.h" />
     <ClInclude Include="Source\Input.h" />
@@ -102,6 +103,7 @@
     <ClCompile Include="Source\GUI.cpp" />
     <ClCompile Include="Source\GUI_Array.cpp" />
     <ClCompile Include="Source\GUI_Button.cpp" />
+    <ClCompile Include="Source\GUI_Selector.cpp" />
     <ClCompile Include="Source\GUI_Slider.cpp" />
     <ClCompile Include="Source\GUI_Text.cpp" />
     <ClCompile Include="Source\LevelManager.cpp" />
