--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj
@@ -47,6 +47,7 @@
     <ClInclude Include="Game\Scenes\Lv1.h" />
     <ClInclude Include="Game\Scenes\Lv10.h" />
     <ClInclude Include="Game\Scenes\Lv4.h" />
+    <ClInclude Include="Game\Scenes\Lv5.h" />
     <ClInclude Include="Game\Scenes\Lv7.h" />
     <ClInclude Include="Game\Scenes\MainMenu.h" />
     <ClInclude Include="Game\Scenes\Setting.h" />
@@ -96,6 +97,7 @@
     <ClCompile Include="Game\Scenes\Lv1.cpp" />
     <ClCompile Include="Game\Scenes\Lv10.cpp" />
     <ClCompile Include="Game\Scenes\Lv4.cpp" />
+    <ClCompile Include="Game\Scenes\Lv5.cpp" />
     <ClCompile Include="Game\Scenes\Lv7.cpp" />
     <ClCompile Include="Game\Scenes\MainMenu.cpp" />
     <ClCompile Include="Game\Scenes\Setting.cpp" />
