--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
@@ -249,6 +249,7 @@
     <ClInclude Include="Game\Scenes\Lv7.h" />
     <ClInclude Include="Game\Scenes\Lv10.h" />
     <ClInclude Include="Entity\Goal.h" />
+    <ClInclude Include="Game\Scenes\Lv5.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="imgui\imgui.cpp">
@@ -359,6 +360,7 @@
     <ClCompile Include="Game\Scenes\Lv4.cpp" />
     <ClCompile Include="Game\Scenes\Lv7.cpp" />
     <ClCompile Include="Game\Scenes\Lv10.cpp" />
+    <ClCompile Include="Game\Scenes\Lv5.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SrandEngine.rc" />
