--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
@@ -250,6 +250,7 @@
     <ClInclude Include="Game\Scenes\Lv10.h" />
     <ClInclude Include="Entity\Goal.h" />
     <ClInclude Include="Game\Scenes\Lv5.h" />
+    <ClInclude Include="Game\Scenes\Lv3.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="imgui\imgui.cpp">
@@ -361,6 +362,7 @@
     <ClCompile Include="Game\Scenes\Lv7.cpp" />
     <ClCompile Include="Game\Scenes\Lv10.cpp" />
     <ClCompile Include="Game\Scenes\Lv5.cpp" />
+    <ClCompile Include="Game\Scenes\Lv3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SrandEngine.rc" />
