--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
@@ -251,6 +251,7 @@
     <ClInclude Include="Entity\Goal.h" />
     <ClInclude Include="Game\Scenes\Lv5.h" />
     <ClInclude Include="Game\Scenes\Lv3.h" />
+    <ClInclude Include="Game\Scenes\Lv6.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="imgui\imgui.cpp">
@@ -363,6 +364,7 @@
     <ClCompile Include="Game\Scenes\Lv10.cpp" />
     <ClCompile Include="Game\Scenes\Lv5.cpp" />
     <ClCompile Include="Game\Scenes\Lv3.cpp" />
+    <ClCompile Include="Game\Scenes\Lv6.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SrandEngine.rc" />
