--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj
@@ -49,6 +49,7 @@
     <ClInclude Include="Game\Scenes\Lv10.h" />
     <ClInclude Include="Game\Scenes\Lv4.h" />
     <ClInclude Include="Game\Scenes\Lv5.h" />
+    <ClInclude Include="Game\Scenes\Lv6.h" />
     <ClInclude Include="Game\Scenes\Lv7.h" />
     <ClInclude Include="Game\Scenes\MainMenu.h" />
     <ClInclude Include="Game\Scenes\Setting.h" />
@@ -100,6 +101,7 @@
     <ClCompile Include="Game\Scenes\Lv3.cpp" />
     <ClCompile Include="Game\Scenes\Lv4.cpp" />
     <ClCompile Include="Game\Scenes\Lv5.cpp" />
+    <ClCompile Include="Game\Scenes\Lv6.cpp" />
     <ClCompile Include="Game\Scenes\Lv7.cpp" />
     <ClCompile Include="Game\Scenes\MainMenu.cpp" />
     <ClCompile Include="Game\Scenes\Setting.cpp" />
