--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj
@@ -41,6 +41,7 @@
     <ClInclude Include="Entity\Goal.h" />
     <ClInclude Include="Entity\Macho.h" />
     <ClInclude Include="Entity\NPC.h" />
+    <ClInclude Include="Game\Scenes\EndLevel.h" />
     <ClInclude Include="Game\Scenes\Lv12.h" />
     <ClInclude Include="Game\Scenes\Lv3.h" />
     <ClInclude Include="Game\Scenes\Level2.h" />
@@ -96,6 +97,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ECS\Collision.cpp" />
+    <ClCompile Include="Game\Scenes\EndLevel.cpp" />
     <ClCompile Include="Game\Scenes\Level2.cpp" />
     <ClCompile Include="Game\Scenes\Level3.cpp" />
     <ClCompile Include="Game\Scenes\LevelSelect.cpp" />
